make plugin generic to build 3SIM on